latestMovies.css
:root {
  --color-dark-gray: #2e2e2e;
  --color-charcoal: #3e414a;
  --color-slate-gray: #4f5667;
  --color-steel-blue: #606b87;
  --color-air-force-blue: #7182a7;
  --color-light-blue: #8299c9;
  --text-color: #f1efef;
}

.latestMovies {
  background: linear-gradient(90deg, var(--color-dark-gray) 0%, var(--color-steel-blue) 100%);
}

.latestMovies .heading {
  text-align: center;
  font-size: clamp(2rem, 2vw, 4rem);
  padding: 2rem 0 2rem 0;
  color: var(--text-color);
  background-color: rgba(0, 0, 0, 0.95);
  position: relative;
}

.latestMovies .heading::before {
  content: "";
  position: absolute;
  bottom: -200px;
  left: 0;
  right: 0;
  height: 200px;
  background: rgb(0, 0, 0);
  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 0) 80%);
}

.latestMovies .gallary {
  width: 100%;
  display: grid;
  justify-items: center;
  padding: 1rem;
  grid-template-columns: 1fr;
  gap: 1rem;
}

.latestMovies .gallary img {
  width: 100%;
  height: 500px;
  min-width: 280px;
  max-width: 400px;
  box-shadow: 30px 30px 30px -20px rgba(0, 0, 0, 0.6);
}

@media (min-width: 768px) {
  .latestMovies .gallary {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1024px) {
  .latestMovies .gallary {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1920px) {
  .latestMovies .gallary {
    grid-template-columns: repeat(6, 1fr);
  }
}

.latestMovies .gallary {
  perspective: 600px;
}

.latestMovies .gallary img {
  border-radius: 2px;
}

.latestMovies .gallary img:nth-child(odd) {
  animation: 2000ms ease-in-out infinite alternate pulse;
}

.latestMovies .gallary img:nth-child(even) {
  animation: 2000ms 2500ms ease-in-out infinite alternate pulse;
}

@keyframes pulse {
  to {
    transform: translate3d(0px, 0px, -20px);
    box-shadow: 15px 15px 20px -20px rgba(0, 0, 0, 0.8);
  }
}

